--- a/templates/store/category_products.html
+++ b/templates/store/category_products.html
@@ -149,7 +149,7 @@
                             </div>
                           </div>
                           <h6> <a class="reset-anchor" href="{% url 'store:product-detail' product.slug %}">{{product.title}}</a></h6>
-                          <p class="small text-muted">${{product.price}}</p>
+                          <p class="small text-muted">{{product.price}} ETB</p>
                         </div>
                       </div>
 
