--- a/templates/store/index.html
+++ b/templates/store/index.html
@@ -86,7 +86,7 @@
                       </div>
                     </div>
                     <h6> <a class="reset-anchor" href="detail.html">{{ product.title }}</a></h6>
-                    <p class="small text-muted">${{product.price}}</p>
+                    <p class="small text-muted">{{product.price}} ETB</p>
                   </div>
                 </div>
 
