--- a/templates/store/detail.html
+++ b/templates/store/detail.html
@@ -1,37 +1,19 @@
 {% extends 'base.html' %}
 {% load static %}
-
     {% block content %}
-
       <section class="py-5">
         <div class="container">
           <div class="row mb-5">
             <div class="col-lg-6">
               <!-- PRODUCT SLIDER-->
-              <div class="row m-sm-0">
-                
+              <div class="row m-sm-0">                
                 <div class="col-sm-12 order-1 order-sm-2">
-                    
-                    {% if product.product_image %}
-                    {% for product in products %}
-                      <a class="d-block" href="{{ product.product_image.url }}" data-lightbox="product" title="{{ product.title }}"><img class="img-fluid" src="{{ product.product_image.url }}" alt="{{ product.title }}"></a>
-                      
-                      <a class="d-block" href="{% static 'img/product-detail-1.jpg' %}" data-lightbox="product" title="{{ product.title }}"><img class="img-fluid" src="{% static 'img/product-detail-1.jpg' %}" alt="{{ product.title} }"></a>
-                    {% endfor %}
-                    {% endif %}
-                    
+                          <img class="img-fluid w-100" src="{{ product.product_image.url }}" alt="{{product.title}}">                    
                 </div>
               </div>
             </div>
             <!-- PRODUCT DETAILS-->
-            <div class="col-lg-6">
-              <ul class="list-inline mb-2">
-                <li class="list-inline-item m-0"><i class="fas fa-star small text-warning"></i></li>
-                <li class="list-inline-item m-0"><i class="fas fa-star small text-warning"></i></li>
-                <li class="list-inline-item m-0"><i class="fas fa-star small text-warning"></i></li>
-                <li class="list-inline-item m-0"><i class="fas fa-star small text-warning"></i></li>
-                <li class="list-inline-item m-0"><i class="fas fa-star small text-warning"></i></li>
-              </ul>
+            <div class="col-lg-6">        
               <h1>{{product.title}}</h1>
               <p class="text-muted lead">{{product.price}} ETB</p>
               <p class="text-small mb-4">{{product.short_description}}</p>
@@ -115,15 +97,12 @@
               </div>
             </div>
           </div>
-
-
           <!-- RELATED PRODUCTS-->
           <h2 class="h5 text-uppercase mb-4">Related products</h2>
           <div class="row">
 
             {% if related_products %}
               {% for rp in related_products %}
-              
                 <!-- PRODUCT-->
                 <div class="col-lg-3 col-sm-6">
                   <div class="product text-center skel-loader">
@@ -135,7 +114,6 @@
                         <img class="img-fluid w-100" src="{% static 'img/product-1.jpg' %}" alt="{{rp.title}}">
                         {% endif %}
                       </a>
-
                       <div class="product-overlay">
                         <ul class="mb-0 list-inline">
                           <li class="list-inline-item m-0 p-0"><a class="btn btn-sm btn-outline-dark" href="#"><i class="far fa-heart"></i></a></li>
@@ -147,7 +125,6 @@
                     <p class="small text-muted">{{rp.price}} ETB</p>
                   </div>
                 </div>
-
               {% endfor %}
             {% endif %}
 
