--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -27,6 +27,10 @@
                 <li class="nav-item">
                   <!-- Link--><a class="nav-link" href="{% url 'store:home' %}">Contact</a>
                 </li>
+                <form action="{% url 'store:search' %}" method="GET">
+                  <input type="text" placeholder="Search for items..." name="q" />
+                  <button style="background: none;" type="submit"><i class="fi-rs-search"></i></button>
+              </form>
               </ul>
               <ul class="navbar-nav ml-auto"> 
                 {% if request.user.is_authenticated %}           
