--- a/templates/footer.html
+++ b/templates/footer.html
@@ -23,9 +23,9 @@
               <h6 class="text-uppercase mb-3">Social media</h6>
               <ul class="list-unstyled mb-0">
                 <li><a class="footer-link" href="#">Twitter</a></li>
-                <li><a class="footer-link" href="#">Instagram</a></li>
+                <li><a class="footer-link" href="https://www.instagram.com/tegabeeno/">Instagram</a></li>
                 <li><a class="footer-link" href="#">Tumblr</a></li>
-                <li><a class="footer-link" href="#">Pinterest</a></li>
+                <li><a class="footer-link" href="https://www.pinterest.com/tegabeeno/">Pinterest</a></li>
               </ul>
             </div>
           </div>
@@ -35,7 +35,7 @@
                 <p class="small text-muted mb-0">&copy; 2020 All rights reserved.</p>
               </div>
               <div class="col-lg-6 text-lg-right">
-                <p class="small text-muted mb-0">Website by <a class="text-white reset-anchor" href="https://www.youtube.com/vijaythapa" target="_blank">Vijay Thapa</a></p>
+                <p class="small text-muted mb-0">Website by <a class="text-white reset-anchor" href="#" target="_blank">Oliad</a></p>
               </div>
             </div>
           </div>
